--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
     -->
     <title>Goe V2</title>
   </head>
-  <body>
+  <body style="background: #F6FFFE">
     <noscript>
       You need to enable JavaScript to run this app.
     </noscript>
