--- a/public/index.html
+++ b/public/index.html
@@ -11,11 +11,14 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <link rel="shortcut icon" href="%PUBLIC_URL%/AtlasP_Icon.png">
 
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans|Comfortaa" rel="stylesheet">
 
     <style>
       body {
         font-family: "Open Sans", sans-serif;
+      }
+      h1 {
+        font-family: "Comfortaa", "cursive";
       }
     </style>
     <!--
@@ -34,7 +37,6 @@
       You need to enable JavaScript to run this app.
     </noscript>
     <div id="root"></div>
-    <script src="https://apis.google.com/js/api.js"></script>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
